chore: remove package-lock.json files, upgrade web-component-tester to latest version to address potential security vulnerability

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "node-fetch": "^2.0.0",
     "now": "^11.0.6",
     "npm-run-all": "^4.1.2",
-    "web-component-tester": "^6.3.0",
+    "web-component-tester": "^6.6.0-pre.5",
     "yaml-lint": "^1.2.2",
     "nightwatch": "^0.9.20"
   },
